# transcribe-pal

./: Cargo.toml
src/: audio.rs  commands.rs  format.rs  lockfile.rs  main.rs  output.rs  resample.rs  shutdown.rs  transcribe.rs
src/audio/: device.rs  device_cb.rs  device_list.rs  mod.rs  pipeline.rs
src/audio/pipeline/: mod.rs  remixer.rs  resampler.rs
src/commands/: enumerate.rs  mod.rs  model.rs  transcribe.rs
src/commands/model/: download.rs  list.rs  remove.rs
src/model/: download.rs  download_meta.rs  file_path.rs  hash.rs  line_parser.rs  manifest.rs  mod.rs  store.rs
src/model/data/: parakeet.manifest
