[package]
name = "transcribe-pal"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = { version = "0.17.3", features = ["jack"] }
ctrlc = "3.5.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
transcribe-rs = { version = "0.3.11", features = ["onnx"] }
